argocd/applications/argo-workflows/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`workflows.proompteng.ai`)
      kind: Rule
      services:
        - name: argo-server
          port: 2746
  tls:
    secretName: wildcard-proompteng-ai-tls
